# Snipe-blockchain

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PUMP_FUN_SNIPER_BOT_PROJECT_BRIEF.txt  README.md  build_vps.exp  check_env.exp  deploy_setup.sh  docker-compose.yml  logs_vps.exp  restart_vps.exp  sync.exp  update_env.exp
docs/: CLIENT_CODE_REVIEW.md  PHASE_1_COMPLETION_REPORT.md  PROJECT_OVERVIEW_REPORT.md  audit_fix_plan.md  demo_test_guide.md  deploy_vps_guide.md  phase1_module1_holder_analysis.md  phase2_module2_panic_sell.md  phase3_module3_dev_wallet_profiler.md  test_guide_module1_module2.md
jito_protos/: Cargo.toml  build.rs
patches/patches/protobuf-src/: Cargo.toml
patches/protobuf-src/: Cargo.toml
src/: lib.rs
src/config/: mod.rs  standard_config.rs  zero_slot_initialization.rs
src/constants/: addresses.rs  constants.rs  discriminator.rs  mod.rs  mode_str.rs  path_string.rs
src/constants/messages/: log_string.rs  mod.rs  msg_string.rs
src/entry_point/: init_db.rs  migration_sniper_mode.rs
src/features/: mod.rs
src/features/build_tx/: get_custom_accounts.rs  mod.rs  pumpswap_struct.rs
src/features/confirm_tx/: mod.rs  send_zero_slot_tx.rs
src/features/get_slot/: mod.rs
src/features/handle_sniper/: execute_trade.rs  handle_migration_ix.rs  mod.rs  price_monitor.rs  process_stream.rs
src/modules/: mod.rs
src/modules/anti_rug/: config.rs  dev_wallet_profiler.rs  filter_result.rs  genesis_detector.rs  holder_analyzer.rs  metadata_checker.rs  mod.rs  panic_sell.rs  pre_buy_filter.rs
src/modules/encryption/: mod.rs
src/modules/file/: mod.rs  write_logs_to_file.rs
src/modules/grpc/: mod.rs
src/modules/macros/: link.rs  logs.rs  mod.rs  msg.rs
src/modules/parse/: event_struct.rs  mod.rs  parse_tx.rs
src/modules/postgresql/: db.rs  mod.rs
src/modules/rpc/: get_balance.rs  mod.rs
src/modules/telegram_alert/: mod.rs
src/modules/telegram_ui/: alert_sender.rs  mod.rs  run_state.rs
(+18 files in other folders)
