[package]
name = "jito-protos"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13"
prost-types = "0.13"
tokio = "1"
tonic = { version = "0.13", features = ["tls-webpki-roots"] }

[build-dependencies]
tonic-build = "0.13"
# protobuf-src removed: fails on Windows (autotools incompatible).
# Install protoc manually and set PROTOC env var instead.
